# DynODE

./: # model_comparasion.py  .dockerignore  .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  acc_metrics.py  azure_job_launcher.py  benchmark.py  config.jsonc  config_base.jsonc  config_base.py  example_end_to_end_run.py  experiment_launcher_azure.py  experiment_runner.py  experiment_setup.py  gen_fake_dat_and_fit.py  good_bad_stats.py  inference.py  log_likelihood_comparison.py  mechanistic_compartments.py  mult_st_models_eval.py  ode_model.md  pyproject.toml  requirements.txt  ruff.toml  run_tests.py  seir_model_v1.py  seir_model_v2.py  seir_model_v3.py  seir_model_v4.py  sim_data_to_sero_generator.py  utils.py  visualizer_app.py
R/: abm_resampling.R  hhs_hospitalization_formatter.R  seroprevalence.R
azure/: azure_utilities.py  experiment_launcher_azure.py
code_fragments/: config_base_old.py  config_r0_0_vax_1in500.py  config_r0_15_vax_0.py  config_r0_15_vax_0_strain_2.py  config_r0_1_vax_0.py  sir_numpyro_vector_diffrax.py
code_notes/: architecture.md  overview.md  patterns.md  style.md
config/: config.py  config_all_recovered_start.py  config_base.py  config_epoch_2.py  config_global.json  config_inferer_covid.json  config_initializer_covid.json  config_initializer_covid_sero.json  config_no_waning.py  config_parser.py  config_r0_0.py  config_r0_0_vax_1in500.py  config_r0_15_vax_0.py  config_r0_15_vax_0_strain_2.py  config_r0_1_vax_0.py  config_runner_covid.json  config_scenario_example.py  config_scenario_template.py  config_strain_2.py  config_unscaled_test.py  config_vax_0.py  config_waning_modified.py
data/: dates_of_interest.csv  fips_to_name.csv  pull_data.py  spline_fits.csv
data_manipulation_scripts/: covidnet_v_nhsn.Rmd  fit_immune_waning.R  hhs_hospitalization_formatter.R  nssp_v_nhsn.Rmd  seroprevalence.R  seroprevalence_all.R  seroprevalence_blood.R  seroprevalence_combined.R  seroprevalence_rnd1to30_adj.R  sim_data_to_sero_generator.py  variants_formatting.R  waning_helper.R
docker_template_configs/: config_global.json  config_inferer_covid.json  config_initializer_covid.json  config_runner_covid.json  example_single_state_runner.py
documentation/: Logging.md
examples/: example2.py  example_end_to_end_run.py  example_sir_config.py  seirs.py  seirs_multi_strain_age_stratified.py  seirs_seasonal_forcing.py  simulate.py  sir.py  sir_age_risk_stratified.py  sir_age_stratified.py  sir_base.py  sir_infer_parameters.py
exp/: fitting_us_20230213_20231022.py  fitting_us_20230213_20231029.py  inference.py
mechanistic_azure/: abstract_azure_runner.py  azure_utilities.py  experiment_launcher_azure.py  experiment_setup.py
mechanistic_model/: __init__.py  abstract_azure_runner.py  abstract_initializer.py  abstract_parameters.py  acc_metrics.py  covid_initializer.py  covid_sero_initializer.py  mechanistic_inferer.py  mechanistic_initializer.py  mechanistic_runner.py  solution_iterpreter.py  static_value_parameters.py  utils.py
model_odes/: SEIP_model.pdf:Zone.Identifier  seip_model.py  seip_model_optimized.py  seir_model_v1.py  seir_model_v2.py  seir_model_v3.py  seir_model_v4.py  seir_model_v5.py
output/: base_model_initial_immune_distribution.png_meta.json
post_processing/: collate_checkpoints.py  log_likelihood_comparison.py  mult_st_models_eval.py  plot_projections_hosp.R
shiny_visualizers/: azure_visualizer.py  (+2 more)
src/mechanistic_azure/: __init__.py  abstract_azure_runner.py  azure_utilities.py  experiment_launcher_azure.py  experiment_setup.py  pyproject.toml
(+1039 files in other folders)
