[tool.poetry]
name = "dynode"
version = "0.1.0"
description = "CDC CFA Predict Scenarios model development"
authors = ["CDC/CFA/Predict/Scenarios"]
license = "Apache License, Version 2.0, January 2004"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
diffrax = "0.7.0"
jax = "0.6.0"
jaxlib = "0.6.0"
matplotlib = ">=3.7.2"
numpy = ">=1.25.2"
numpyro = ">=0.13.2"
pandas = ">=2.0.3"
seaborn = ">=0.13.2"
pytest = ">=7.4.0"
pip = "^24.0"
epiweeks = "^2.3.0"
pre-commit = "^3.7.1"
mypy = "^1.10.0"
requests = "^2.32.3"
docker = "^7.1.0"
bayeux-ml = "^0.1.14"
pydocstyle = "^6.3.0"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.2.3.241126"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
