[tool.poetry]
name = "dynode"
version = "2024.04.23.1a"
description = "CDC CFA Predict Scenarios model development"
authors = ["CFA"]
license = "Apache License, Version 2.0, January 2004"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
diffrax = "0.6.2"
jax = "0.6.0"
jaxlib = "0.6.0"
matplotlib = "3.9.*"
numpy = "2.0.*"
numpyro = "0.15.*"
pandas = "2.2.*"
seaborn = "0.13.*"
pip = "24.2.*"
epiweeks = "2.3.*"
docker = "7.1.*"
pydantic = "^2.10.6"
chex = {git = "https://github.com/mishmish66/chex.git", rev="6c9f2fb727ba385474501158bc7c747dd792c419"}

arviz = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "2.2.*"
pydocstyle = "6.3.*"
mypy = "1.11.*"
pytest = "8.3.*"
pre-commit = "3.8.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
