[tool.poetry]
name = "dynode"
version = "2025.07.14.1a"
description = "CDC CFA Predict Scenarios model development"
authors = ["CFA"]
license = "Apache License, Version 2.0, January 2004"
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
diffrax = "0.7.*"
jax = ">=0.6.1,<0.7"
jaxlib = ">=0.6.1,<0.7"
matplotlib = "3.9.*"
numpy = "2.0.*"
numpyro = "0.15.*"
pandas = "2.2.*"
seaborn = "0.13.*"
epiweeks = "2.3.*"
pydantic = "^2.10.6"
chex = {git = "https://github.com/mishmish66/chex.git", rev="6c9f2fb727ba385474501158bc7c747dd792c419"}
arviz = "^0.21.0"
typing-extensions = "^4.13.2"
annotated-types = "^0.7.0"
sphinx = "<8.2.3"
sphinx-book-theme = "^1.1.4"
tomli = "^2.2.1"
myst-parser = "^4.0.1"
sphinxcontrib-mermaid = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "2.2.*"
pydocstyle = "6.3.*"
mypy = "1.11.*"
pytest = "8.3.*"
pre-commit = "3.8.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
